--- a/index.html
+++ b/index.html
@@ -3,81 +3,29 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Plum Chart</title>
+
+    <script type="module" src="/src/main.ts"></script>
 </head>
 
 <body>
-    <script>
-        resources = {
-            "ko": {
-                "basic": "기본 차트",
-                "monitor": "모니터링 차트",
-            },
-            "en": {
-                "basic": "Basic Chart",
-                "monitor": "Monitor Chart",
-            }
-        }
-    </script>
-
-    <style>
-        body {
-            font-family: sans-serif;
-            padding-top: 20px;
-            padding-left: 2rem;
-        }
-        body > * {
-            margin:  0.5rem;
-        }
-
-        .toolbar {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: flex-end;
-
-        }
-
-        .toolbar>* {
-            font-size: 1.2rem;
-            line-height: 30px;
-            height: 30px;
-            margin-left: 10px;
-        }
-    </style>
-
-    <div class="toolbar">
-        <label for="language-select">Language</label>
-        <select id="language-select">
-            <option value="ko">한국어</option>
-            <option value="en">English</option>
-        </select>
+    <div class="container">
+        <div class="menu">
+            <div class="menuItem">
+                <button id="btn1">기본 차트</button>
+            </div>
+            <div class="menuItem">
+                <button id="btn2">모니터링 차트</button>
+            </div>
+        </div>
+        <div class="content">
+            <div class="basicChartContent">
+            </div>
+            <div class="monitoringChartContent">
+            </div>
+        </div>
     </div>
-    <h2>Plum Chart Examples</h2>
-    <div>
-        <a href="/pages/basic/index.html" data-resource="basic">Basic</a>
-    </div>
-    <div>
-        <a href="/pages/monitor/index.html" data-resource="monitor">Monitor Chart</a>
-    </div>
-
-    <script>
-        function changeLanguage(language) {
-            const resource = resources[language];
-            document.querySelectorAll("[data-resource]").forEach((element) => {
-                const key = element.getAttribute("data-resource");
-                element.innerHTML = resource[key];
-            });
-        }
-
-        document.getElementById("language-select").addEventListener("change", (event) => {
-            const language = event.target.value;
-            changeLanguage(language);
-        });
-        changeLanguage("ko");
-    </script>
 </body>
 
 </html>
